2015-02-14  Alan Modra  <amodra@gmail.com>

	PR ld/17973
	* bfdlink.h (struct bfd_link_info): Delete loading_lto_outputs.

2015-02-09  Mark Wielaard  <mjw@redhat.com>

	* dwarf2.h: Add DW_LANG_Fortran03 and DW_LANG_Fortran08.

2015-02-09  Mark Wielaard  <mjw@redhat.com>

	* dwarf2.def: Add DW_TAG_atomic_type.

2015-01-28  James Bowman  <james.bowman@ftdichip.com>

	* dis-asm.h (print_insn_ft32): Declare.

2015-01-15  Mark Wielaard  <mjw@redhat.com>

	* dwarf2.def (DW_AT_noreturn): New DWARF5 attribute.

2015-01-14  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* libiberty.h: Merge from GCC.

2015-01-01  Alan Modra  <amodra@gmail.com>

	Update year range in copyright notice of all files.

2014-12-24  Uros Bizjak  <ubizjak@gmail.com>
	    Ben Elliston  <bje@au.ibm.com>
	    Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	* libiberty.h (xasprintf): Declare.

2014-12-23  Alan Modra  <amodra@gmail.com>

	* bfdlink.h (struct bfd_link_hash_entry): Comment non_ir_ref.  Add
	linker_def.

2014-12-12  Phil Muldoon  <pmuldoon@redhat.com>
	    Jan Kratochvil  <jan.kratochvil@redhat.com>
	    Tom Tromey  <tromey@redhat.com>

	* gcc-c-fe.def: New file.
	* gcc-c-interface.h: New file.
	* gcc-interface.h: New file.

2014-12-11  Uros Bizjak  <ubizjak@gmail.com>
            Ben Elliston  <bje@au.ibm.com>
            Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	* libiberty.h (xvasprintf): Declare.

2014-12-06  Eric Botcazou  <ebotcazou@adacore.com>

	* dis-asm.h (print_insn_visium): Declare.

2014-11-24  Mark Wielaard  <mjw@redhat.com>

	* dwarf2.h: Add DW_LANG_C_plus_plus_11, DW_LANG_C11 and
	DW_LANG_C_plus_plus_14.

2014-11-21  Shinichiro Hamaji  <shinichiro.hamaji@gmail.com>

	* dwarf2.def (DW_AT_APPLE_optimized, DW_AT_APPLE_flags)
	(DW_AT_APPLE_isa, DW_AT_APPLE_block)
	(DW_AT_APPLE_major_runtime_vers, DW_AT_APPLE_runtime_class)
	(DW_AT_APPLE_omit_frame_ptr, DW_AT_APPLE_property_name)
	(DW_AT_APPLE_property_getter, DW_AT_APPLE_property_setter)